--- a/branches/branch-playground/sim/simtests.vcproj
+++ b/branches/branch-playground/sim/simtests.vcproj
@@ -446,6 +446,7 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
 				RelativePath=".\tests\testclientmanager.cpp"
 				>
 				<FileConfiguration
