Fixed: warnings-- Fixed: national string reading from contacts.conf Fixed: MacOS (x64) build

--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -23,6 +23,8 @@ IF( APPLE )
     SET( MACOSX_BUNDLE_SHORT_VERSION_STRING 0.9.6 )
     SET( MACOSX_BUNDLE_VERSION 0.9.6 )
     SET( MACOSX_BUNDLE_LONG_VERSION_STRING Version 0.9.6 )
+    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch i386" )
+    SET( CMAKE_C_FLAGS "-arch i386" )
 ELSE( APPLE )
     SET( PROGNAME sim )
 ENDIF( APPLE )
