* who fails may try again^^

--- a/branches/branch-playground/sim.vcproj
+++ b/branches/branch-playground/sim.vcproj
@@ -1590,6 +1590,7 @@
 					RelativePath=".\sim\contacts\protocol.cpp"
 					>
 				</File>
+				<File
 					RelativePath=".\sim\contacts\protocolmanager.cpp"
 					>
 				</File>
