* repair compile from tests for Release...

--- a/branches/branch-playground/sim/simtests.vcproj
+++ b/branches/branch-playground/sim/simtests.vcproj
@@ -119,6 +119,7 @@
 			IntermediateDirectory="test.dir\Release"
 			ConfigurationType="1"
 			UseOfMFC="0"
+			InheritedPropertySheets="$(SolutionDir)sim\win32\sim-default.vsprops"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
 			>
