--- a/branches/branch-playground/plugins/icq/icq.vcproj
+++ b/branches/branch-playground/plugins/icq/icq.vcproj
@@ -280,10 +280,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\icqlogin.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\icqstatus.cpp"
 				>
 			</File>
@@ -293,6 +289,14 @@
 			</File>
 			<File
 				RelativePath=".\oscarsocket.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\rateinfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\servicesnachandler.cpp"
 				>
 			</File>
 			<File
@@ -345,10 +349,6 @@
 					>
 				</File>
 				<File
-					RelativePath=".\moc_icqlocation.cpp"
-					>
-				</File>
-				<File
 					RelativePath=".\moc_icqstatus.cpp"
 					>
 				</File>
@@ -387,7 +387,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing $(InputName).h ..."
-						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h"
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
 						Outputs="$(InputDir)moc_$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -397,7 +397,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing $(InputName).h ..."
-						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h"
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
 						Outputs="$(InputDir)moc_$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -567,6 +567,14 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\rateinfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\servicesnachandler.h"
+				>
+			</File>
+			<File
 				RelativePath=".\snac.h"
 				>
 				<FileConfiguration
@@ -575,7 +583,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing $(InputName).h ..."
-						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h"
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
 						Outputs="$(InputDir)moc_$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -585,7 +593,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing $(InputName).h ..."
-						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h"
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
 						Outputs="$(InputDir)moc_$(InputName).cpp"
 					/>
 				</FileConfiguration>
