Build-Issues and back to compatiblity. exename is sim! Ever! NOT sim-im.

--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -195,7 +195,7 @@ TARGET_LINK_LIBRARIES(sim simlib ${QT_QTMAIN_LIBRARY})
 # set correct install path
 INSTALL(TARGETS sim RUNTIME DESTINATION ${BINDIR})
 
-SET_TARGET_PROPERTIES(sim PROPERTIES OUTPUT_NAME sim-im${SIM_FLAVOUR})
+SET_TARGET_PROPERTIES(sim PROPERTIES OUTPUT_NAME sim${SIM_FLAVOUR})
 
 IF(WIN32)
     SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
